# Workflow_system

./: .gitmodules  Cargo.toml  README.md  package.json  tsconfig.json  vite.config.ts
.commandcode/taste/: taste.md
.kilo/plans/: editor-light-lsp.md
crates/workflow-actions/: Cargo.toml
crates/workflow-actions/src/: lib.rs  log_message.rs  noop.rs  set_var.rs
crates/workflow-cli/: Cargo.toml
crates/workflow-cli/src/: main.rs
crates/workflow-cli/src/commands/: evaluate.rs  export.rs  mod.rs  plugins.rs  test_runner.rs  validate.rs  watch.rs
crates/workflow-domain/: Cargo.toml
crates/workflow-domain/src/: action.rs  condition.rs  context.rs  error.rs  event.rs  lib.rs  result.rs  rule.rs  schema.rs  settings.rs  validation.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: actions.rs  conditions.rs  cooldown.rs  emitter.rs  engine.rs  expressions.rs  lib.rs  state_machine.rs
crates/workflow-engine/tests/: integration_test.rs
crates/workflow-i18n/: Cargo.toml
crates/workflow-i18n/locales/: en.yaml  es.yaml
crates/workflow-i18n/src/: lib.rs
crates/workflow-i18n/tests/: smoke.rs
crates/workflow-lsp/: Cargo.toml
crates/workflow-lsp/src/: analysis.rs  capabilities.rs  features.rs  handlers.rs  inference.rs  lib.rs  main.rs  scope.rs  state.rs
crates/workflow-lsp/src/features/: completion.rs  mod.rs  typecheck.rs
crates/workflow-lsp/src/inference/: annotation.rs  builtins.rs  expr.rs  methods.rs  mod.rs  program.rs  registry.rs  schema.rs  ty.rs  value.rs
crates/workflow-lsp/src/lint/: mod.rs  redundant_expression.rs  unknown_identifier.rs  unused_binding.rs  unused_workflow.rs
crates/workflow-native-editor/: Cargo.toml
crates/workflow-native-editor/src/: app.rs  completion.rs  cursor.rs  diagnostics_panel.rs  file_browser.rs  file_io.rs  find_bar.rs  folding.rs  goto_definition.rs  gutter.rs  highlight.rs  history.rs  home.rs  keybindings.rs  layouter.rs  lsp.rs  main.rs  plugin_manager.rs  plugin_panel.rs  popup.rs  recent.rs  search_in_files.rs  shortcuts_window.rs  snippet.rs  test_panel.rs  theme.rs
crates/workflow-native-editor/src/editor/: edit_ops.rs  history_ops.rs  import_hover.rs  input.rs  mod.rs  project.rs  tests_runner.rs  view.rs
crates/workflow-native-editor/src/popup/: completion.rs  hover.rs  layout.rs  markdown.rs  mod.rs  model.rs  type_parser.rs
crates/workflow-parser/: Cargo.toml
crates/workflow-parser/src/: ast.rs  compiler.rs  evaluator.rs  flow.pest  lib.rs  parser.rs
crates/workflow-parser/tests/: parser_tests.rs
crates/workflow-plugins/: Cargo.toml
crates/workflow-plugins/src/: adapter.rs  lib.rs  loader.rs  manager.rs  registry.rs
crates/workflow-serialize/: Cargo.toml
crates/workflow-serialize/src/: exporter.rs  json.rs  lib.rs  loader.rs  toml_format.rs  yaml.rs
crates/workflow-serialize/tests/: yaml_test.rs
crates/workflow-test-runner/: Cargo.toml
crates/workflow-test-runner/src/: assert.rs  discovery.rs  execute.rs  lib.rs  report.rs  runner.rs
crates/workflow-test-runner/tests/: smoke.rs
crates/workflow-test-runner/tests/fixtures/: failing.flow  failing.test.flow  hello.flow  hello.test.flow
crates/workflow-wasm/: Cargo.toml
crates/workflow-wasm/src/: lib.rs
docs/: README.md  actions.md  architecture.md  cli.md  editor.md  language.md  lsp.md  test-runner.md  wasm.md
examples/: advanced.flow  advanced.test.flow  basic.flow  basic.test.flow  batch_start.json  complex_event.json  cross_file_import.flow  cross_file_import.test.flow  emit.flow  emit.test.flow  nested_data.json  shared_utils.flow  user_registered.json
examples/flow-with-plugins/: demo.flow  demo.test.flow
examples/plugin-hello/: Cargo.toml
examples/plugin-hello/src/: lib.rs
rules/: advanced.flow  examples.json  examples.yaml  workflows.flow
src/: evaluator.ts  parser.ts  types.ts
www/: autocomplete.ts  highlight.ts  hover.ts  index.html  index.tsx  playground.html  playground.ts  schema.ts  scope.ts  server.ts  types.ts
www/components/: App.tsx  Editor.tsx  ExamplesBar.tsx  Header.tsx  HoverTooltip.tsx  OutputPanel.tsx  StatusBar.tsx
www/styles/: base.css  editor.css  examples.css  header.css  layout.css  main.css  output.css  statusbar.css
