[package]
name = "workflow-native-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flow-editor"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = "0.95"
thiserror = { workspace = true }
