[package]
name = "workflow-native-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flow-editor"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
workflow-lsp = { path = "../workflow-lsp" }
workflow-parser = { path = "../workflow-parser" }
thiserror = { workspace = true }
