[package]
name = "workflow-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
workflow-domain = { path = "../workflow-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
workflow-i18n = { path = "../workflow-i18n" }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
