[package]
name = "workflow-test-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
workflow-parser = { path = "../workflow-parser" }
workflow-domain = { path = "../workflow-domain" }
workflow-plugins = { path = "../workflow-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
workflow-i18n = { path = "../workflow-i18n" }
