[package]
name = "workflow-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
workflow-domain = { path = "../workflow-domain" }
workflow-engine = { path = "../workflow-engine" }
workflow-i18n = { path = "../workflow-i18n" }
workflow-parser = { path = "../workflow-parser" }
workflow-actions = { path = "../workflow-actions" }
workflow-serialize = { path = "../workflow-serialize", default-features = false }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
